added local database

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -21,6 +21,7 @@
 <body>
     <h3>
         <a href="{{ url_for('reset') }}">ERASE ALL DATA</a>
+        <a href="{{ url_for('createTable') }}">Create Table!</a>
     </h3>
 </body>
 
