--- a/templates/insert.html
+++ b/templates/insert.html
@@ -20,8 +20,8 @@
         <a href="{{ url_for('insert_course') }}">Course</a>
         <a href="{{ url_for('insert_expertise') }}">Expertise</a>
         <a href="{{ url_for('insert_availability') }}">Availability</a>
-        <a href="{{ url_for('insert_sessionName') }}">Session</a>
         <a href="{{ url_for('insert_user') }}">User</a>
+        <a href="{{ url_for('insert_oldData') }}">Existing Data</a>
     
     </h1>
     
