--- a/templates/delete_user.html
+++ b/templates/delete_user.html
@@ -5,13 +5,12 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h0>
-        *************CONFIRMATION*************
-    </h0>
-    
-    <h1> 
-        Thank you, override complete
-    </h1>
-</div>
+    <h2>
+        COMING SOON...
+    </h2>
 
+</div>
+<h1>
+    <a href="{{ url_for('delete') }}">Back</a>
+</h1>
 {% endblock %}
