--- a/templates/select_by_tutor.html
+++ b/templates/select_by_tutor.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Page 2{% endblock %}
+{% block title %}Hospital Manager - Server Error - Internal{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
     <h1>
-        hello professor #2
+        select by tutor
     </h1>
 </div>
 {% endblock %}
