--- a/templates/delete_tutor.html
+++ b/templates/delete_tutor.html
@@ -5,14 +5,13 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h0>
-        *************View Course*************
-    </h0>
-    
-    <h1>
-        <a href="{{ url_for('select') }}">Back</a>
-    </h1>
+    <h2>
+        Add New Course
+    </h2>
+
 </div>
 {{ wtf.quick_form(form) }}
-
+<h1>
+    <a href="{{ url_for('delete') }}">Back</a>
+</h1>
 {% endblock %}
