--- a/templates/insert.html
+++ b/templates/insert.html
@@ -5,26 +5,23 @@
 
 {% block page_content %}
 <div class="page-header">
-
-
     <h1>
-        * * * * * * * * SELECT WHAT YOU WOULD LIKE TO ADD * * * * * * * * *
+        SELECT WHAT YOU WOULD LIKE TO ADD
     </h1>
+
+    <div class="d-flex justify-content-center">
+        <div class="btn-group" role="group" aria-label="Add options">
+            <a href="{{ url_for('insert_tutor') }}" class="btn btn-primary btn-lg">Tutor</a>
+            <a href="{{ url_for('insert_course') }}" class="btn btn-primary btn-lg">Course</a>
+            <a href="{{ url_for('insert_expertise') }}" class="btn btn-primary btn-lg">Expertise</a>
+            <a href="{{ url_for('insert_availability') }}" class="btn btn-primary btn-lg">Availability</a>
+            <a href="{{ url_for('insert_user') }}" class="btn btn-primary btn-lg">User</a>
+            <a href="{{ url_for('insert_oldData') }}" class="btn btn-primary btn-lg">Existing Data</a>
+        </div>
+    </div>
 
     <h1>
         <a href="{{ url_for('selections') }}">Back</a>
     </h1>
-    
-    <h1>
-        <a href="{{ url_for('insert_tutor') }}">Tutor</a>
-        <a href="{{ url_for('insert_course') }}">Course</a>
-        <a href="{{ url_for('insert_expertise') }}">Expertise</a>
-        <a href="{{ url_for('insert_availability') }}">Availability</a>
-        <a href="{{ url_for('insert_user') }}">User</a>
-        <a href="{{ url_for('insert_oldData') }}">Existing Data</a>
-    
-    </h1>
-    
 </div>
 {% endblock %}
-
