--- a/templates/insert_tutor.html
+++ b/templates/insert_tutor.html
@@ -5,18 +5,13 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h0>
-        *************Add New Tutor*************
-    </h0>
-    
-    <h1> 
-        Please type student's name and vnumber
-    </h1>
+    <h2>
+        Add New Tutor
+    </h2>
 
-    <h1>
-        <a href="{{ url_for('insert') }}">Back</a>
-    </h1>
 </div>
 {{ wtf.quick_form(form) }}
-
+<h1>
+    <a href="{{ url_for('insert') }}">Back</a>
+</h1>
 {% endblock %}
