--- a/templates/insert_user.html
+++ b/templates/insert_user.html
@@ -5,19 +5,13 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h0>
-        *************Add New User*************
-    </h0>
-    
-    <h1> 
-        Please type Username and password
-    </h1>
-
-    <h1>
-        <a href="{{ url_for('insert') }}">Back</a>
-    </h1>
+    <h2>
+        Add New User
+    </h2>
 
 </div>
 {{ wtf.quick_form(form) }}
-
+<h1>
+    <a href="{{ url_for('insert') }}">Back</a>
+</h1>
 {% endblock %}
