--- a/templates/update.html
+++ b/templates/update.html
@@ -1,31 +1,23 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Update{% endblock %}
+{% block title %}delete{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
     <h1>
-        Enter desired data to be updated in the following format:
+        SELECT WHAT YOU WOULD LIKE TO ADD
     </h1>
-    <h3>
-        table - tableName - appointments<br>
-        data(condition) - {"key":"value","key2":"value2"} - {"AID":2,"PID":16} <br>
-        updates - {"key":"value"} - {"AID":99}
-    </h3>
-    <h4>
-        schemas:<br>
-        Patients(PID,patientName,patientAddress,phoneNumber,insuranceID,age)<br>
-        physicians(EID,employeeName,salary)<br>
-        appointments(AID,PID,EID,apptDate,apptTime)<br>
-        medications(MID,medName,medDescription,medCost,instructions)<br>
-        procedures(proID,proType,proCost,proDescription)<br>
-        prescribes(EID,MID,PID,AID)<br>
-        undergoes_In(AID,proID)<br>
-        can_operate(prosedureID,EID)<br>
-        treated_by(PID,EID)<br>
-    </h4>
-    
+
+    <div class="d-flex justify-content-center">
+        <div class="btn-group" role="group" aria-label="Add options">
+            <a href="{{ url_for('update_expertise') }}" class="btn btn-primary btn-lg">Expertise</a>
+            <a href="{{ url_for('update_availability') }}" class="btn btn-primary btn-lg">Availability</a>
+        </div>
+    </div>
+
+    <h1>
+        <a href="{{ url_for('selections') }}">Back</a>
+    </h1>
 </div>
-{{ wtf.quick_form(form) }}
 {% endblock %}
