--- a/templates/insert_tutor.html
+++ b/templates/insert_tutor.html
@@ -8,7 +8,11 @@
     <h2>
         Add New Tutor
     </h2>
-
+    {% if dup == 1 %}
+        <div class="alert alert-danger">
+            Tutor already exists in the system.
+        </div>
+    {% endif %}
 </div>
 {{ wtf.quick_form(form) }}
 <h1>
