--- a/templates/insert_user.html
+++ b/templates/insert_user.html
@@ -6,11 +6,10 @@
 {% block page_content %}
 <div class="page-header">
     <h2>
-        Add New User
+        Coming soon
     </h2>
 
 </div>
-{{ wtf.quick_form(form) }}
 <h1>
     <a href="{{ url_for('insert') }}">Back</a>
 </h1>
